// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and compares with different data 1`] = `
<div
  className="AccountInfo"
>
  <div
    className="ComparableField"
  >
    <div
      className="FormGroup"
      style={
        Object {
          "backgroundColor": "#eff3fe",
        }
      }
    >
      <style>
        
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
      </style>
      <div
        data-testid="accountAddressGroup"
      >
        <label
          className="form-label"
          htmlFor="accountAddress"
        >
          some label
        </label>
        <input
          className="form-control"
          data-testid="accountAddress"
          id="accountAddress"
          name="accountAddress"
          onBlur={[Function]}
          onChange={[Function]}
          readOnly={true}
          type="text"
          value="vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz"
        />
      </div>
    </div>
  </div>
  <div
    className="Identity"
  >
    <div
      className="row"
    >
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="firstNameGroup"
            >
              <label
                className="form-label"
                htmlFor="firstName"
              >
                First Name
              </label>
              <input
                className="form-control is-invalid"
                data-testid="firstName"
                id="firstName"
                name="firstName"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="John"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="lastNameGroup"
            >
              <label
                className="form-label"
                htmlFor="lastName"
              >
                Last Name
              </label>
              <input
                className="form-control is-invalid"
                data-testid="lastName"
                id="lastName"
                name="lastName"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Doe"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="emailGroup"
            >
              <label
                className="form-label"
                htmlFor="email"
              >
                Email
              </label>
              <input
                className="form-control"
                data-testid="email"
                id="email"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="john.doe@logion.network"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="phoneNumberGroup"
            >
              <label
                className="form-label"
                htmlFor="phoneNumber"
              >
                Phone Number
              </label>
              <input
                className="form-control"
                data-testid="phoneNumber"
                id="phoneNumber"
                name="phoneNumber"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="+1234"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="PostalAddress"
  >
    <h3>
      Address
    </h3>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="line1Group"
            >
              <label
                className="form-label"
                htmlFor="line1"
              >
                Line1
              </label>
              <input
                className="form-control is-invalid"
                data-testid="line1"
                id="line1"
                name="line1"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Place de le République Française, 10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="line2Group"
            >
              <label
                className="form-label"
                htmlFor="line2"
              >
                Line2
              </label>
              <input
                className="form-control is-invalid"
                data-testid="line2"
                id="line2"
                name="line2"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="boite 15"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-4"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="postalCodeGroup"
            >
              <label
                className="form-label"
                htmlFor="postalCode"
              >
                Postal Code
              </label>
              <input
                className="form-control"
                data-testid="postalCode"
                id="postalCode"
                name="postalCode"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="4000"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="PostalAddressCol col-md-8"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="cityGroup"
            >
              <label
                className="form-label"
                htmlFor="city"
              >
                City
              </label>
              <input
                className="form-control"
                data-testid="city"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Liège"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="countryGroup"
            >
              <label
                className="form-label"
                htmlFor="country"
              >
                Country
              </label>
              <input
                className="form-control"
                data-testid="country"
                id="country"
                name="country"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Belgium"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and compares with same data 1`] = `
<div
  className="AccountInfo"
>
  <div
    className="ComparableField"
  >
    <div
      className="FormGroup"
      style={
        Object {
          "backgroundColor": "#eff3fe",
        }
      }
    >
      <style>
        
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
      </style>
      <div
        data-testid="accountAddressGroup"
      >
        <label
          className="form-label"
          htmlFor="accountAddress"
        >
          some label
        </label>
        <input
          className="form-control"
          data-testid="accountAddress"
          id="accountAddress"
          name="accountAddress"
          onBlur={[Function]}
          onChange={[Function]}
          readOnly={true}
          type="text"
          value="vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz"
        />
      </div>
    </div>
  </div>
  <div
    className="Identity"
  >
    <div
      className="row"
    >
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="firstNameGroup"
            >
              <label
                className="form-label"
                htmlFor="firstName"
              >
                First Name
              </label>
              <input
                className="form-control"
                data-testid="firstName"
                id="firstName"
                name="firstName"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="John"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="lastNameGroup"
            >
              <label
                className="form-label"
                htmlFor="lastName"
              >
                Last Name
              </label>
              <input
                className="form-control"
                data-testid="lastName"
                id="lastName"
                name="lastName"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Doe"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="emailGroup"
            >
              <label
                className="form-label"
                htmlFor="email"
              >
                Email
              </label>
              <input
                className="form-control"
                data-testid="email"
                id="email"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="john.doe@logion.network"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="phoneNumberGroup"
            >
              <label
                className="form-label"
                htmlFor="phoneNumber"
              >
                Phone Number
              </label>
              <input
                className="form-control"
                data-testid="phoneNumber"
                id="phoneNumber"
                name="phoneNumber"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="+1234"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="PostalAddress"
  >
    <h3>
      Address
    </h3>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="line1Group"
            >
              <label
                className="form-label"
                htmlFor="line1"
              >
                Line1
              </label>
              <input
                className="form-control"
                data-testid="line1"
                id="line1"
                name="line1"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Place de le République Française, 10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="line2Group"
            >
              <label
                className="form-label"
                htmlFor="line2"
              >
                Line2
              </label>
              <input
                className="form-control"
                data-testid="line2"
                id="line2"
                name="line2"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="boite 15"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-4"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="postalCodeGroup"
            >
              <label
                className="form-label"
                htmlFor="postalCode"
              >
                Postal Code
              </label>
              <input
                className="form-control"
                data-testid="postalCode"
                id="postalCode"
                name="postalCode"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="4000"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="PostalAddressCol col-md-8"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="cityGroup"
            >
              <label
                className="form-label"
                htmlFor="city"
              >
                City
              </label>
              <input
                className="form-control"
                data-testid="city"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Liège"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="countryGroup"
            >
              <label
                className="form-label"
                htmlFor="country"
              >
                Country
              </label>
              <input
                className="form-control"
                data-testid="country"
                id="country"
                name="country"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Belgium"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders without comparison 1`] = `
<div
  className="AccountInfo"
>
  <div
    className="ComparableField"
  >
    <div
      className="FormGroup"
      style={
        Object {
          "backgroundColor": "#eff3fe",
        }
      }
    >
      <style>
        
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
      </style>
      <div
        data-testid="accountAddressGroup"
      >
        <label
          className="form-label"
          htmlFor="accountAddress"
        >
          some label
        </label>
        <input
          className="form-control"
          data-testid="accountAddress"
          id="accountAddress"
          name="accountAddress"
          onBlur={[Function]}
          onChange={[Function]}
          readOnly={true}
          type="text"
          value="vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz"
        />
      </div>
    </div>
  </div>
  <div
    className="Identity"
  >
    <div
      className="row"
    >
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="firstNameGroup"
            >
              <label
                className="form-label"
                htmlFor="firstName"
              >
                First Name
              </label>
              <input
                className="form-control"
                data-testid="firstName"
                id="firstName"
                name="firstName"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="John"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="lastNameGroup"
            >
              <label
                className="form-label"
                htmlFor="lastName"
              >
                Last Name
              </label>
              <input
                className="form-control"
                data-testid="lastName"
                id="lastName"
                name="lastName"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Doe"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="emailGroup"
            >
              <label
                className="form-label"
                htmlFor="email"
              >
                Email
              </label>
              <input
                className="form-control"
                data-testid="email"
                id="email"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="john.doe@logion.network"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="IdentityCol col-md-6"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="phoneNumberGroup"
            >
              <label
                className="form-label"
                htmlFor="phoneNumber"
              >
                Phone Number
              </label>
              <input
                className="form-control"
                data-testid="phoneNumber"
                id="phoneNumber"
                name="phoneNumber"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="+1234"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="PostalAddress"
  >
    <h3>
      Address
    </h3>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="line1Group"
            >
              <label
                className="form-label"
                htmlFor="line1"
              >
                Line1
              </label>
              <input
                className="form-control"
                data-testid="line1"
                id="line1"
                name="line1"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Place de le République Française, 10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="line2Group"
            >
              <label
                className="form-label"
                htmlFor="line2"
              >
                Line2
              </label>
              <input
                className="form-control"
                data-testid="line2"
                id="line2"
                name="line2"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="boite 15"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-4"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="postalCodeGroup"
            >
              <label
                className="form-label"
                htmlFor="postalCode"
              >
                Postal Code
              </label>
              <input
                className="form-control"
                data-testid="postalCode"
                id="postalCode"
                name="postalCode"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="4000"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="PostalAddressCol col-md-8"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="cityGroup"
            >
              <label
                className="form-label"
                htmlFor="city"
              >
                City
              </label>
              <input
                className="form-control"
                data-testid="city"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Liège"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="PostalAddressCol col-md-12"
      >
        <div
          className="ComparableField"
        >
          <div
            className="FormGroup"
            style={
              Object {
                "backgroundColor": "#eff3fe",
              }
            }
          >
            <style>
              
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
            </style>
            <div
              data-testid="countryGroup"
            >
              <label
                className="form-label"
                htmlFor="country"
              >
                Country
              </label>
              <input
                className="form-control"
                data-testid="country"
                id="country"
                name="country"
                onBlur={[Function]}
                onChange={[Function]}
                readOnly={true}
                type="text"
                value="Belgium"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
